--- a/mywebserver.yml
+++ b/mywebserver.yml
@@ -13,3 +13,15 @@
       name: apache2
       state: restarted
     when: ansible_os_family=="Debian"
+
+  - name: i want to install webserver on RedHat nodes only 
+    yum:
+      name: httpd
+      state: present
+    when: ansible_os_family=="RedHat"
+
+  - name: i want to state webserver on RedHat nodes only
+    service:
+      name: httpd
+      state: started
+    when: ansible_os_family=="RedHat"
