--- a/myjavainstall.yml
+++ b/myjavainstall.yml
@@ -6,10 +6,10 @@
     apt:
       name: "{{myjavaonubuntu}}"
       state: present
-    when: ansible_os_familly=="Debian"
+    when: ansible_os_family=="Debian"
 
   - name: install java on RedHat nodes
     yum:
       name: "{{myjavaonredhat}}"
       state: present
-    when: ansible_os_familly=="RedHat"
+    when: ansible_os_family=="RedHat"
