--- a/myfileshandlers.yml
+++ b/myfileshandlers.yml
@@ -13,4 +13,9 @@
     service:
       name: apache2
       state: started
+
+  - name: i want copy index.j2 file into nodes
+    template:
+      src:  myindex.j2
+      dest: /var/www/html/index.html
   
