--- a/mytom8role/tasks/deployjavaapplication.yml
+++ b/mytom8role/tasks/deployjavaapplication.yml
@@ -1,6 +1,6 @@
 ---
 - name: deploy java application
   get_url:
-    url: https://get.jenkins.io/war-stable/2.289.1/jenkins.war
-    dest: /opt/tomcat/webapps/jenkins.war
+    url: https://maha4aws.s3.us-east-2.amazonaws.com/mahaLogin.war
+    dest: /opt/tomcat/webapps/mahaLogin.war
     force_basic_auth: yes
